# Github-Basics

./: .gitignore  Odd_Eve_using_switch.c  README.md
Practice/C/: CMakeLists.txt  Odd_eve.c  Ternary.c  swap_2_num.c  toggle_nth_bit.c
Practice/C/Basics/: Bit_value.c  CMakeLists.txt  Patterns.c  consonant_vowel.c
